<resources>
    <string name="app_name" translatable="false">Agora Meeting</string>
    <string name="app_name_land" translatable="false">Land Agora Meeting</string>

    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_check_upgrade">Check upgrade</string>
    <string name="about_register_account">Sign up Agora.io</string>
    <string name="about_view_document">View document</string>
    <string name="about_version_tips">Is the latest version, current version is V%1$s</string>
    <string name="about_new_version_tips">Not the latest version, current version is V%1$s</string>
    <string name="about_version_tips_all">Version:V%1$s, Release Time:%2$s\nRTC SDK Version:V%3$s, RTM SDK Version:V%4$s\nWhiteBoard Version:V%5$s</string>
    <string name="about_upgrade_title">Agora Meeting has a new version</string>
    <string name="about_upgrade">Upgrade now</string>
    <string name="about_later">Later</string>
    <string name="about_agreement">User agreement</string>
    <string name="about_product_disclaimer">Product disclaimer</string>
    <string name="about_policy">Privacy policy</string>
    <string name="copyright" translatable="false">Copyright © 2020 OVC.</string>
    <string name="copyright_agora" translatable="false">www.agora.io</string>
    <string name="about_teams">Teams of service</string>

    <!-- 评分 -->
    <string name="rating_title">Rate</string>
    <string name="rating_call_quality">Call Quality</string>
    <string name="rating_function_completeness">Function Completeness</string>
    <string name="rating_general_experience">General Experience</string>
    <string name="rating_comment">Comment</string>
    <string name="rating_comment_hint">Share your experience</string>
    <string name="rating_start">%dStart</string>

    <!-- 设置 -->
    <string name="setting_max_host">Max Host</string>

</resources>
